Update routes/products. Add .vscode/launch.json
